# trap_assay

./: .gitignore  CMakeLists.txt  README.md  Vagrantfile  example_cam_purpose_config.yaml  install.sh  package.xml
example_config/: data_association_parameters.yaml  delta_video_parameters.yaml  kalman_parameters.py  liveviewer_parameters.yaml  tracker_parameters.yaml
launch/: half_trap.launch  trap.launch  traps.launch  two_traps.launch
scripts/: make_links.sh  process.py
